Debut de la mise en place de la traduction plus remise en forme de la page d'inscription des bénévoles

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,7 +1,8 @@
 laguntzaile_benevoles:
     resource: "@laguntzaileBenevolesBundle/Resources/config/routing.yml"
-    prefix:   /
-
+    prefix:   /{_locale}
+    requirements:
+        _locale: fr|eu
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
